added relative template tagging

--- a/UserSignUp/templates/UserApp/index.html
+++ b/UserSignUp/templates/UserApp/index.html
@@ -7,5 +7,7 @@
   <body>
     <h1>Welcome to SunRaj!!!!</h1>
     <h2>Please hit /users to opem UserSignUp page</h2>
+    <a href="{% url 'UserApp:user' %}">Sign Up Page</a>
+    <a href="{% url 'UserApp:all_users' %}"> All Users Page</a>
   </body>
 </html>
