--- a/UserSignUp/templates/UserApp/user.html
+++ b/UserSignUp/templates/UserApp/user.html
@@ -17,6 +17,8 @@
 <input type="submit" class="btn btn-primary" value="Submit">
   </form>
 </div>
+<a href="{% url 'index' %}">Home Page</a>
+<a href="{% url 'UserApp:all_users' %}"> All Users Page</a>
 </div>
   </body>
 </html>
