--- a/UserSignUp/templates/UserApp/user_list.html
+++ b/UserSignUp/templates/UserApp/user_list.html
@@ -21,5 +21,7 @@
   </ol>
 {% endif %}
 </div>
+<a href="{% url 'UserApp:user' %}">Sign Up Page</a>
+<a href="{% url 'index' %}"> Home Page</a>
   </body>
 </html>
